[build-system]
requires = ["setuptools>=61.0", "pandas>=2.2.0", "numpy>=1.26.4", "matplotlib>=3.8.0",
    "psutil>=5.9.0", "py-cpuinfo>=9.0.0", "mplfinance>=0.12.10b0", "tqdm>=4.66.0"] # Add yfinance
# Optionals: TA-Lib, schedule
build-backend = "setuptools.build_meta"

[project]
name = "backtest-pro"
dynamic = ["version"]
authors = [
  { name="Anthony Lavertu", email="alavertu2@gmail.com" },
]
description = "A feature-rich backtesting framework for financial strategies"
readme = "README.md"
requires-python = ">= 3.8"
keywords = ["backtest-pro", "backtestpro", "backtest", "pybacktest", "py-backtest", "backtesting", "quant", "finance",
    "stocks", "crypto", "cryptocurrency", "derivatives", "trading", "investing", "financial",
    "technical", "fundamental", "ai", "machine", "learning", "neural", "network", "deep", "reinforcement", "algorithm",
    "strategy", "portfolio", "optimization", "risk", "management"]
classifiers = [
    "Programming Language :: Python :: 3",
#    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "psutil",
    "py-cpuinfo",
    "mplfinance",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/carcajou666/backtestPro"
Issues = "https://github.com/carcajou666/backtestPro/issues"